--- a/part1_structure_learning_k2_algo.ipynb
+++ b/part1_structure_learning_k2_algo.ipynb
@@ -12,14 +12,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fc327b18",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bioconductor version '3.20' is out-of-date; the current release version '3.21'\n",
+      "  is available with R version '4.5'; see https://bioconductor.org/install\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'BiocGenerics'\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:stats':\n",
+      "\n",
+      "    IQR, mad, sd, var, xtabs\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:base':\n",
+      "\n",
+      "    Filter, Find, Map, Position, Reduce, anyDuplicated, aperm, append,\n",
+      "    as.data.frame, basename, cbind, colnames, dirname, do.call,\n",
+      "    duplicated, eval, evalq, get, grep, grepl, intersect, is.unsorted,\n",
+      "    lapply, mapply, match, mget, order, paste, pmax, pmax.int, pmin,\n",
+      "    pmin.int, rank, rbind, rownames, sapply, saveRDS, setdiff, table,\n",
+      "    tapply, union, unique, unsplit, which.max, which.min\n",
+      "\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'igraph'\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:graph':\n",
+      "\n",
+      "    degree, edges, intersection, union\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:BiocGenerics':\n",
+      "\n",
+      "    normalize, path, union\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:stats':\n",
+      "\n",
+      "    decompose, spectrum\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:base':\n",
+      "\n",
+      "    union\n",
+      "\n",
+      "\n",
+      "-- \u001b[1mAttaching core tidyverse packages\u001b[22m ------------------------ tidyverse 2.0.0 --\n",
+      "\u001b[32mv\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32mv\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
+      "\u001b[32mv\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32mv\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.2     \u001b[32mv\u001b[39m \u001b[34mtibble   \u001b[39m 3.3.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.4     \u001b[32mv\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32mv\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.4     \n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------ tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mlubridate\u001b[39m::\u001b[32m%--%()\u001b[39m      masks \u001b[34migraph\u001b[39m::%--%()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mggplot2\u001b[39m::\u001b[32mPosition()\u001b[39m    masks \u001b[34mBiocGenerics\u001b[39m::Position(), \u001b[34mbase\u001b[39m::Position()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mas_data_frame()\u001b[39m masks \u001b[34mtibble\u001b[39m::as_data_frame(), \u001b[34migraph\u001b[39m::as_data_frame()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mstringr\u001b[39m::\u001b[32mboundary()\u001b[39m    masks \u001b[34mgraph\u001b[39m::boundary()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcombine()\u001b[39m       masks \u001b[34mBiocGenerics\u001b[39m::combine()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mcompose()\u001b[39m       masks \u001b[34migraph\u001b[39m::compose()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mcrossing()\u001b[39m      masks \u001b[34migraph\u001b[39m::crossing()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m        masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m           masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32msimplify()\u001b[39m      masks \u001b[34migraph\u001b[39m::simplify()\n",
+      "\u001b[36mi\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "\n",
+      "Caricamento pacchetto: 'bnlearn'\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:igraph':\n",
+      "\n",
+      "    as.igraph, compare, subgraph\n",
+      "\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'DescTools'\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:igraph':\n",
+      "\n",
+      "    %c%\n",
+      "\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'infotheo'\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:bnlearn':\n",
+      "\n",
+      "    discretize\n",
+      "\n",
+      "\n",
+      "Caricamento del pacchetto richiesto: bitops\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'bitops'\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:DescTools':\n",
+      "\n",
+      "    %^%\n",
+      "\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'bnstruct'\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:bnlearn':\n",
+      "\n",
+      "    impute, read.bif, read.dsc, read.net, shd, write.dsc\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:tidyr':\n",
+      "\n",
+      "    complete\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:Rgraphviz':\n",
+      "\n",
+      "    name\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# load packages\n",
     "if (!require(\"BiocManager\", quietly = TRUE))    install.packages(\"BiocManager\")\n",
@@ -38,7 +166,8 @@
     "library(Rgraphviz) |> suppressPackageStartupMessages()\n",
     "library(DescTools) |> suppressPackageStartupMessages()\n",
     "library(igraph)    |> suppressPackageStartupMessages()\n",
-    "library(dplyr)     |> suppressPackageStartupMessages()"
+    "library(dplyr)     |> suppressPackageStartupMessages()\n",
+    "library(bnstruct)"
    ]
   },
   {
