--- a/part2_structure_learning_bnstruct.ipynb
+++ b/part2_structure_learning_bnstruct.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "e3a31711",
    "metadata": {
     "vscode": {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "8ee224b3",
    "metadata": {
     "vscode": {
@@ -94,6 +94,129 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Caricamento del pacchetto richiesto: graph\n",
+      "\n",
+      "Caricamento del pacchetto richiesto: BiocGenerics\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'BiocGenerics'\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:stats':\n",
+      "\n",
+      "    IQR, mad, sd, var, xtabs\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:base':\n",
+      "\n",
+      "    Filter, Find, Map, Position, Reduce, anyDuplicated, aperm, append,\n",
+      "    as.data.frame, basename, cbind, colnames, dirname, do.call,\n",
+      "    duplicated, eval, evalq, get, grep, grepl, intersect, is.unsorted,\n",
+      "    lapply, mapply, match, mget, order, paste, pmax, pmax.int, pmin,\n",
+      "    pmin.int, rank, rbind, rownames, sapply, saveRDS, setdiff, table,\n",
+      "    tapply, union, unique, unsplit, which.max, which.min\n",
+      "\n",
+      "\n",
+      "Caricamento del pacchetto richiesto: grid\n",
+      "\n",
+      "Caricamento del pacchetto richiesto: bitops\n",
+      "\n",
+      "Caricamento del pacchetto richiesto: igraph\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'igraph'\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:graph':\n",
+      "\n",
+      "    degree, edges, intersection, union\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:BiocGenerics':\n",
+      "\n",
+      "    normalize, path, union\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:stats':\n",
+      "\n",
+      "    decompose, spectrum\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:base':\n",
+      "\n",
+      "    union\n",
+      "\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'bnstruct'\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:Rgraphviz':\n",
+      "\n",
+      "    name\n",
+      "\n",
+      "\n",
+      "Bioconductor version '3.20' is out-of-date; the current release version '3.21'\n",
+      "  is available with R version '4.5'; see https://bioconductor.org/install\n",
+      "\n",
+      "-- \u001b[1mAttaching core tidyverse packages\u001b[22m ------------------------ tidyverse 2.0.0 --\n",
+      "\u001b[32mv\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32mv\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
+      "\u001b[32mv\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32mv\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.2     \u001b[32mv\u001b[39m \u001b[34mtibble   \u001b[39m 3.3.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.4     \u001b[32mv\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32mv\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.4     \n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------ tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mlubridate\u001b[39m::\u001b[32m%--%()\u001b[39m      masks \u001b[34migraph\u001b[39m::%--%()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mggplot2\u001b[39m::\u001b[32mPosition()\u001b[39m    masks \u001b[34mBiocGenerics\u001b[39m::Position(), \u001b[34mbase\u001b[39m::Position()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mas_data_frame()\u001b[39m masks \u001b[34mtibble\u001b[39m::as_data_frame(), \u001b[34migraph\u001b[39m::as_data_frame()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mstringr\u001b[39m::\u001b[32mboundary()\u001b[39m    masks \u001b[34mgraph\u001b[39m::boundary()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mcombine()\u001b[39m       masks \u001b[34mBiocGenerics\u001b[39m::combine()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mcomplete()\u001b[39m      masks \u001b[34mbnstruct\u001b[39m::complete()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mcompose()\u001b[39m       masks \u001b[34migraph\u001b[39m::compose()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mcrossing()\u001b[39m      masks \u001b[34migraph\u001b[39m::crossing()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m        masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m           masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32msimplify()\u001b[39m      masks \u001b[34migraph\u001b[39m::simplify()\n",
+      "\u001b[36mi\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "\n",
+      "Caricamento pacchetto: 'bnlearn'\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:infotheo':\n",
+      "\n",
+      "    discretize\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:bnstruct':\n",
+      "\n",
+      "    impute, read.bif, read.dsc, read.net, shd, write.dsc\n",
+      "\n",
+      "\n",
+      "I seguenti oggetti sono mascherati da 'package:igraph':\n",
+      "\n",
+      "    as.igraph, compare, subgraph\n",
+      "\n",
+      "\n",
+      "\n",
+      "Caricamento pacchetto: 'DescTools'\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:igraph':\n",
+      "\n",
+      "    %c%\n",
+      "\n",
+      "\n",
+      "Il seguente oggetto `e mascherato da 'package:bitops':\n",
+      "\n",
+      "    %^%\n",
+      "\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -137,18 +260,48 @@
      ]
     },
     {
-     "ename": "ERROR",
-     "evalue": "Error: non `e possibile trovare un metodo ereditato per la funzione 'variables' per la firma 'x = \"data.frame\"'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error: non `e possibile trovare un metodo ereditato per la funzione 'variables' per la firma 'x = \"data.frame\"'\nTraceback:\n",
-      "1. withVisible(eval(ei, envir))",
-      "2. eval(ei, envir)",
-      "3. eval(ei, envir)",
-      "4. variables(child)",
-      "5. (function (classes, fdef, mtable) \n . {\n .     methods <- .findInheritedMethods(classes, fdef, mtable)\n .     if (length(methods) == 1L) \n .         return(methods[[1L]])\n .     else if (length(methods) == 0L) {\n .         cnames <- paste0(fdef@signature[seq_along(classes)], \n .             \" = \\\"\", vapply(classes, as.character, \"\"), \"\\\"\", \n .             collapse = \", \")\n .         stop(gettextf(\"unable to find an inherited method for function %s for signature %s\", \n .             sQuote(fdef@generic), sQuote(cnames)), call. = FALSE, \n .             domain = NA)\n .     }\n .     else stop(\"Internal error in finding inherited methods; didn't return a unique method\", \n .         domain = NA)\n . })(list(\"data.frame\"), new(\"nonstandardGenericFunction\", .Data = function (x) \n . {\n .     standardGeneric(\"variables\")\n . }, generic = structure(\"variables\", package = \"bnstruct\"), package = \"bnstruct\", \n .     group = list(), valueClass = character(0), signature = \"x\", \n .     default = NULL, skeleton = (function (x) \n .     stop(gettextf(\"invalid call in method dispatch to '%s' (no default method)\", \n .         \"variables\"), domain = NA))(x)), <environment>)",
-      "6. stop(gettextf(\"unable to find an inherited method for function %s for signature %s\", \n .     sQuote(fdef@generic), sQuote(cnames)), call. = FALSE, domain = NA)",
-      "7. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"non `e possibile trovare un metodo ereditato per la funzione 'variables' per la firma 'x = \\\"data.frame\\\"'\", \n .     base::quote(NULL))"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "bnstruct :: performing imputation ...\n",
+      "\n",
+      "bnstruct :: imputation finished.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PHASE 1: Building Undirected Network...\n",
+      "Calculating Mutual Information...\n",
+      "Building initial network...\n",
+      "PHASE 2: Achieving Complete Connectivity...\n",
+      "Achieving complete connectivity...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in shortest_paths(g, from = from, to = to):\n",
+      "\"At vendor/cigraph/src/paths/unweighted.c:444 : Couldn't reach some vertices.\"\n",
+      "Warning message in shortest_paths(g, from = from, to = to):\n",
+      "\"At vendor/cigraph/src/paths/unweighted.c:444 : Couldn't reach some vertices.\"\n",
+      "Warning message in shortest_paths(g, from = from, to = to):\n",
+      "\"At vendor/cigraph/src/paths/unweighted.c:444 : Couldn't reach some vertices.\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PHASE 3: Refining Graph Structure...\n",
+      "Found 0 triangles to refine...\n",
+      "PHASE 4-7: Assigning Orientations...\n",
+      "PHASE 4: Conditional independence tests...\n",
+      "Completing orientations...\n",
+      "Extracting topological order...\n"
      ]
     }
    ],
@@ -163,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "id": "b57ef787",
    "metadata": {
     "vscode": {
@@ -192,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "49cf6f3a",
    "metadata": {
     "vscode": {
@@ -749,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4d08af6c",
    "metadata": {
     "vscode": {
@@ -779,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b925f274",
    "metadata": {
     "vscode": {
@@ -796,7 +949,13 @@
       "bnstruct :: learning using MMHC completed.\n",
       "\n",
       "bnstruct :: learning network parameters ... \n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "bnstruct :: parameter learning done.\n",
       "\n"
      ]
@@ -814,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d025c6c7",
    "metadata": {
     "vscode": {
@@ -857,6 +1016,18 @@
     "))\n",
     "plot(ruiz_net_bs, main = \"Ruiz DAG\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6f3c181",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
